k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  annotations:
    argocd.argoproj.io/sync-wave: "-2" 
  labels:
    argocd.argoproj.io/managed-by: argocd
