k8s/sample-app-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: sample-app
  name: sample-app
  namespace: sample-app
spec:
  ingressClassName: nginx
  rules:
  # CHANGE THIS
  - host: sample-app.gke1.itconcepts.cloud
    http:
      paths:
      - backend:
          service:
            name: sample-app
            port:
              name: http
        path: /
        pathType: Prefix

---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sample-app
  namespace: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        #image: gcr.io/cluster-01-290863/sample-app-opns:1.0.0
        imagePullPolicy: Always
        image: gcr.io/cluster-01-290863/sample-app-opns:2.0.0
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9090
          name: metrics

  strategy:
    canary:
      analysis:
        startingStep: 2
        templates:
        - templateName: sample-app
      canaryMetadata:
        labels:
          deployment: canary
      canaryService: sample-app-canary
      stableMetadata:
        labels:
          deployment: stable
      stableService: sample-app-stable
      steps:
      - setWeight: 25
      - pause: {}
      - setWeight: 50
      - pause:
          duration: 3m
      - setWeight: 75
      - pause:
          duration: 3m
      trafficRouting:
        nginx:
          additionalIngressAnnotations:
            canary-by-header: X-Canary
          stableIngress: sample-app


---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-stable
  namespace: sample-app
  labels:
    app: sample-app
  annotations:
    argo-rollouts.argoproj.io/managed-by-rollouts: sample-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: metrics
    port: 9090
    targetPort: metrics
  selector:
    app: sample-app
  type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-canary
  namespace: sample-app
  labels:
    app: sample-app
  annotations:
    argo-rollouts.argoproj.io/managed-by-rollouts: sample-app
spec:
  ports:
  - name: http
    port: 8080
    targetPort: http
  - name: metrics
    port: 9090
    targetPort: metrics
  selector:
    app: sample-app
  type: LoadBalancer
